k8s/preproduction-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centridesk-backend-lb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: "global-lb"
    alb.ingress.kubernetes.io/group.name: global-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/status
    external-dns.alpha.kubernetes.io/hostname: backcentridesk.platform-pre.centribal.com
spec:
  rules:
    - host: "backcentridesk.platform-pre.centribal.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: centridesk-backend
                port:
                  number: 80
